# sloop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  dist.toml
.agents/sloop/: config.yaml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
docs/: README.md  cli.md  concepts.md  configuration.md  getting-started.md  protocol.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: envelope.rs  flow.rs  frontmatter.rs
src/: cli.rs  clock.rs  config.rs  coordination.rs  daemon.rs  eligibility.rs  flow.rs  frontmatter.rs  ids.rs  init.rs  lib.rs  logging.rs  main.rs  outcome.rs  paths.rs  post.rs  protocol.rs  reindex.rs  reindex_evidence.rs  render.rs  run_log.rs  run_ref.rs  store.rs  templates.rs  vendor_error.rs  worker-instructions.md
src/claude/: errors.yaml
src/codex/: errors.yaml
src/daemon/: aftercare.rs  commands.rs  dispatcher.rs  history.rs  mod.rs  recovery.rs  runner.rs  scheduler.rs  server.rs  worker_api.rs
src/defaults/: config.yaml
src/defaults/flows/: default.yaml
src/defaults/projects/: default.md
src/defaults/prompts/: review.md
src/domain/: graph.rs  mod.rs  ticket.rs  work.rs
src/opencode/: errors.yaml
src/runner/: local.rs  mod.rs
src/sources/: exec.rs  markdown.rs  mod.rs
src/templates/: config.yaml  flow.yaml  project.md  ticket.md
tests/: README.md  cli.rs  daemon.rs  fake_agent.rs  lease.rs  logs.rs  outcome.rs  post.rs  reindex.rs  repair.rs  run.rs  run_identity.rs  show.rs  soak.rs  worker_verbs.rs  worktree_retention.rs
tests/fuzz/: flow_parse.rs  frontmatter.rs  main.rs  protocol.rs  support.rs
tests/property/: flow_gen.rs  flow_walk.rs  main.rs  model.rs  races.rs  roundtrip.rs
tests/proptest-regressions/: frontmatter.txt  roundtrip.txt
tests/support/: mod.rs
